--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,24 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>PoptartFitness</title>
+  <title>Poptart Fitness</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <pop-root></pop-root>
+  <pop-root>
+    <div style="height: 100%; display: flex; align-items: center; justify-content: center;">
+      <svg width="200px" height="200px" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="xMidYMid"
+        class="lds-rolling" style="background: none;">
+        <circle cx="50" cy="50" fill="none" stroke="#d32f2f" stroke-width="10" r="35" stroke-dasharray="164.93361431346415 56.97787143782138"
+          transform="rotate(174 50 50)">
+          <animateTransform attributeName="transform" type="rotate" calcMode="linear" values="0 50 50;360 50 50" keyTimes="0;1" dur="1s"
+            begin="0s" repeatCount="indefinite"></animateTransform>
+        </circle>
+      </svg>
+    </div>
+  </pop-root>
 </body>
 </html>
