--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,9 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <meta name="theme-color" content="#303f9f">
+  <link rel="manifest" href="/manifest.json">
 </head>
 <body>
   <pop-root>
