--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,10 @@
 
   <meta name="theme-color" content="#303f9f">
   <link rel="manifest" href="/manifest.json">
+
+  <link rel="apple-touch-icon" href="/assets/pwa-icons/icon-192x192.png">
+  <meta name="apple-mobile-web-app-title" content="Poptarts">
+  <meta name="apple-mobile-web-app-capable" content="yes">
 </head>
 <body>
   <pop-root>
